welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:46: error: not found: value depart
    depart()
    ^